--- a/requirements.txt
+++ b/requirements.txt
@@ -122,3 +122,7 @@ tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version #
 tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 # prevent bq 3+ db-dtypes package error when running training from bq
+
+# NLP tools
+torch
+transformers
