--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 raw_data/
 notebooks/.ipynb_checkpoints/
 .env
+
+# OS generated files #
+######################
+.DS_Store
+__MACOSX
+
+
+# inteliJ #
+*.h5
+.idea
+*.gz
+*PKG-INFO
+*.egg-info
+*.csv
+*.zip
+*.sqlite
+# IDE #
+*.vscode
