--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ defusedxml
 dill
 exceptiongroup
 executing
+fastapi
 fastjsonschema
 fonttools
 fqdn
@@ -95,6 +96,7 @@ scipy
 seaborn
 Send2Trash
 setuptools
+sentencepiece
 six
 sniffio
 soupsieve
@@ -106,6 +108,7 @@ tomlkit
 typing_extensions
 uri-template
 urllib3
+uvicorn
 wcwidth
 webcolors
 websocket-client
@@ -126,3 +129,4 @@ tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 # NLP tools
 torch
 transformers
+sentencepiece
