reshuffle entirely requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,23 @@
-aiofiles
-aiosqlite
-anyio
-argon2-cffi
-argon2-cffi-bindings
-arrow
-astroid
-asttokens
-attrs
-Babel
-backcall
-beautifulsoup4
-bleach
-certifi
-cffi
-charset-normalizer
-comm
-contourpy
-cycler
-debugpy
-decorator
-defusedxml
-dill
-exceptiongroup
-executing
-fastapi
-fastjsonschema
-fonttools
-fqdn
-idna
-ipdb
-ipykernel
-ipython
-ipython-genutils
-isoduration
-isort
-jedi
-Jinja2
-joblib
-json5
-jsonpointer
-jupyter_client
-jupyter_core
-jupyter-events
-jupyter_server
-jupyter_server_fileid
-jupyter_server_terminals
-jupyter_server_ydoc
-jupyter-ydoc
-jupyterlab
-jupyterlab-pygments
-jupyterlab_server
-kiwisolver
-lazy-object-proxy
-MarkupSafe
-matplotlib
-matplotlib-inline
-mccabe
-mistune
-nbclassic
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-notebook
-notebook_shim
+# general
 numpy
-packaging
-pandocfilters
-parso
-pexpect
-pickleshare
-Pillow
+pandas
 pip
-platformdirs
-pluggy
-prometheus-client
-prompt-toolkit
-psutil
-ptyprocess
-pure-eval
-pycparser
-pylint
-pyparsing
-pyrsistent
-pytest
-python-dateutil
-python-json-logger
-pytz
-PyYAML
-requests
-rfc3339-validator
-rfc3986-validator
-scikit-learn
-scipy
-seaborn
-Send2Trash
-setuptools
-sentencepiece
-six
-sniffio
-soupsieve
-terminado
-threadpoolctl
-tinycss2
-tomli
-tomlkit
-typing_extensions
-uri-template
-urllib3
+# os #bulit-in python
+
+# API
+fastapi
 uvicorn
-wcwidth
-webcolors
-websocket-client
-wrapt
-y-py
-ypy-websocket
-google-cloud-bigquery
-google-cloud-storage
-db-dtypes
-pyarrow
-# Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
+
+# Model
+  # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
 tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
 tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
 tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
-
-# prevent bq 3+ db-dtypes package error when running training from bq
-
-# NLP tools
-torch
+  # End of trick
+keras
 transformers
 sentencepiece
+
+#GCP
+google-cloud-storage
+#google-cloud
