minor modif + docker JUNO

--- a/.env.yaml
+++ b/.env.yaml
@@ -14,8 +14,8 @@ GCP_REGION: "europe-west1"
 # API on Gcloud Run
 GCR_DOCKER_IMAGE: "plt_image"
 GCR_REGION: "eu.gcr.io"
-GCR_MEMORY: "2Gi"
-#SERVICE_URL="TBD"
+GCR_MEMORY: "16Gi"
+SERVICE_URL: "https://textwizard-3fpi23igxa-ew.a.run.app/"
 
 # Compute Engine
 #INSTANCE=plt
